added leaving group endpoint
