# src/api/routes/groups.routes.ts
@@ -1,6 +1,13 @@
 import { Route } from "../../config";
 import { authenticateUser } from "../middlewares";
-import { createGroup, deleteGroup, getGroup, getGroupMembers, getGroups } from "../resources/groups.resources";
+import {
+    createGroup,
+    deleteGroup,
+    getGroup,
+    getGroupMembers,
+    getGroups,
+    leaveGroup
+} from "../resources/groups.resources";
 import { getGroupInvites } from "../resources/invitation.resource";
 
 export const routes: Route[] = [
@@ -34,6 +41,14 @@ export const routes: Route[] = [
         handler: [
             authenticateUser,
             getGroupMembers
+        ]
+    },
+    {
+        path: "/v1/groups/:id/leave",
+        method: "delete",
+        handler: [
+            authenticateUser,
+            leaveGroup
         ]
     },
     {
